chore: Refactor to introduce files service package